--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "royal-medical-spa-chatbot-server",
+  "name": "royal-spa-chatbot",
   "version": "1.0.0",
-  "description": "Secure backend server for Royal Medical Spa AI chatbot",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": ["chatbot", "claude", "medical-spa"],
-  "author": "Royal Medical Spa",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "express": "4.18.2",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1"
   }
 }
